--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Denis Díaz Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css">
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script src="%PUBLIC_URL%/static/js/main.js"></script>
 </body>
 
 </html>
