--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Denis Díaz Portfolio</title>
-  <link rel="icon" href="%PUBLIC_URL%/logo2.png">
+  <link rel="icon" type="image/x-icon" href="favico.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css">
 </head>
